--- a/css/style.css
+++ b/css/style.css
@@ -41,16 +41,61 @@
  padding-left: 2rem;
 }
 
-.sidebar-menu a span:first-child{
-    font-size:1.5rem;
-    padding-right: 1rem;
-}
-
 .sidebar-menu a {
+    padding-left: 1rem;
     display: block;
     color: #fff;
     font-size: 1.1rem
 }
+
+.sidebar-menu a.active{
+    background: #fff;
+    padding-top: 1rem ;
+    padding-bottom: 1rem;
+    color: var(--main-color);
+    border-radius: 30px 0px 0px 30px;
+
+}
+
+.sidebar-menu a span:first-child{
+    font-size:1.5rem;
+    padding-right: 1rem;
+}
 .main-content{
     margin-left: 345px;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.search-wrapper {
+    border: 1px solid #f0f0f0;
+    border-radius: 50%;
+    height: 50px;
+}
+
+.search-wrapper span{
+    display: inline-block;
+    padding: 0rem 1rem;
+    font-size: 1.5rem;
+}
+
+.search-wrapper input {
+    height: 100%;
+    padding: .5rem;
+    border: none;
+    outline: none;
+}
+
+.user-wrapper{
+    display: flex;
+    align-items: center;
+}
+
+.user-wrapper img {
+    border-radius: 50%;
+    margin-right: 1rem;
 }
