--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
     top: 0;
     height: 100%;
     background: var(--main-color);
+    z-index: 100;
 }
 
 .sidebar-brand{
@@ -30,9 +31,14 @@
     color: #fff;
 }
 
+
 .sidebar-brand span {
     display: inline-block;
     padding-right: 1rem;
+}
+
+.sidebar-menu{
+    margin-top: 1rem;
 }
 
 .sidebar-menu li{
@@ -69,6 +75,20 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 1rem;
+    box-shadow: 2px 2px 5px rgb(0, 0, 0,0.2);
+    position: fixed;
+    left: 345px;
+    width: calc(100% - 345px);
+    top: 0;
+}
+
+header h2{
+    color: #222;
+}
+
+header label span{
+    font-size: 1.7rem;
+    padding-right: 1rem;
 }
 
 .search-wrapper {
@@ -99,3 +119,174 @@ header {
     border-radius: 50%;
     margin-right: 1rem;
 }
+
+
+.user-wrapper small{
+    display: inline-block;
+    color: var(--text-grey);
+}
+
+main{
+    margin-top: 90px;
+    padding: 2rem 1.5rem;
+    background: #b1b4b8;
+    min-height: calc(100vh - 90px);
+}
+
+.cards{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 2rem;
+    margin-top: 1rem;
+}
+
+.card{
+    margin: 1rem;
+}
+
+.card-single{
+    display: flex;
+    justify-content: space-between;
+    background: #fff;
+    padding: 2rem;
+    border-radius: 2px;
+}
+
+
+.card-single div:last-child span {
+    font-size: 3rem;
+    color: var(--main-color);
+    
+}
+
+.card-single div:first-child span{
+    color: var(--text-grey);
+
+}
+
+.card-single:last-child{
+    background: var(--main-color);
+}
+
+
+.card-single:last-child h1,
+.card-single:last-child div:first-child span,
+.card-single:last-child div:last-child span {
+    color: #fff;
+
+}
+
+.recent-grid {
+    margin-top: 3.5rem;
+    display: grid;
+    grid-template-columns: 65% auto;
+}
+
+.card{
+    background: #fff;
+    border-radius: 5px;
+}
+
+.card-header
+{
+    padding: 1rem;
+}
+
+.card-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.card-header button{
+    background: var(--main-color);
+    border-radius: 10px;
+    color: #fff;
+    font-size: .8rem;
+    padding: .5rem 1rem;
+    border: 1px solid var(--main-color);
+}
+
+table{
+    border-collapse: collapse;
+}
+
+thead tr {
+    border-top: 1px solid #f0f0f0;
+    border-bottom: 2px solid #f0f0f0;
+}
+
+thead td{
+    font-weight: 700;
+}
+
+td {
+    padding: .5rem 1rem;
+    font-size: .9rem;
+    color: #222;
+}
+
+td .status {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+tr td:last-child{
+    display: flex;
+    align-items: center;
+}
+
+.status.purple{
+    background: rebeccapurple;
+}
+
+.status.pink{
+    background: deeppink;
+}
+.status.orange{
+    background: orangered;
+}
+
+.table-responsive{
+    width: 100%;
+    overflow-x: auto;
+}
+
+.customer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5rem 1rem;
+}
+
+.info {
+    display: flex;
+    align-items: center;
+}
+
+.info img{
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.info h4{
+    font-weight: .8rem;
+    font-weight: 700;
+    color: #222;
+}
+
+.info small {
+    font-weight: 600;
+    color: var(--text-grey);
+}
+
+.contact span {
+    font-size: 1.2rem;
+    display: inline-block;
+    margin-left: .5rem;
+    color: var(--main-color);
+} 
